# Python-WEB-10

./: pyproject.toml
hm_project/: .env  db.sqlite3  manage.py
hm_project/hm_project/: asgi.py  settings.py  wsgi.py
hm_project/quotes/: models.py  urls.py  utils.py  views.py
hm_project/quotes/migrations/: 0001_initial.py
hm_project/quotes/templates/quotes/: base.html  index.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html
hm_project/utils/: add_quotes_to_mongo.py  authors.json  migration.py  quotes.json
